--- a/src/lib/components/modals/JSONEditorModal.scss
+++ b/src/lib/components/modals/JSONEditorModal.scss
@@ -1,9 +1,14 @@
 @import '../../styles';
-@import 'Modal';
 
-.jse-modal.jse-jsoneditor-modal {
+.jse-modal-wrapper {
+  flex: 1;
+  display: flex;
+  min-width: 0;
+  min-height: 0;
+  flex-direction: column;
+
   .jse-modal-contents {
-    padding-top: 0;
+    @include jse-modal-contents;
 
     .jse-label {
       font-weight: bold;
@@ -27,6 +32,7 @@
       flex: 1;
       min-height: 150px;
       min-width: 0;
+      max-width: 100%;
       display: flex;
 
       --jse-theme-color: #{$modal-editor-theme-color};
