--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -1,158 +1,164 @@
 @import '../../styles';
-@import 'Modal';
 
-.jse-modal.jse-transform {
-  .jse-modal-contents {
-    color: inherit;
+.jse-transform-modal-inner {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  min-height: 0;
+}
+
+.jse-modal-contents {
+  @include jse-modal-contents;
+
+  color: inherit;
+  padding: 0;
+
+  .jse-main-contents {
+    flex: 1;
+    display: flex;
+    gap: $padding-double;
     min-height: 0;
-    padding: 0;
+    box-sizing: border-box;
 
-    .jse-main-contents {
+    padding: 0 $padding-double $padding;
+
+    .jse-query-contents {
       flex: 1;
       display: flex;
-      gap: $padding-double;
-      min-height: 0;
-      box-sizing: border-box;
+      flex-direction: column;
 
-      padding: 0 $padding-double $padding;
+      .jse-description {
+        :global(p) {
+          margin: $padding 0;
 
-      .jse-query-contents {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-
-        .jse-description {
-          :global(p) {
-            margin: $padding 0;
-
-            &:first-child {
-              margin-top: 0;
-            }
-
-            &:last-child {
-              margin-bottom: 0;
-            }
+          &:first-child {
+            margin-top: 0;
           }
 
-          :global(code) {
-            background: $modal-code-background;
-            font-family: $font-family-mono;
-            font-size: $font-size-mono;
+          &:last-child {
+            margin-bottom: 0;
           }
         }
 
+        :global(code) {
+          background: $modal-code-background;
+          font-family: $font-family-mono;
+          font-size: $font-size-mono;
+        }
+      }
+
+      textarea.jse-query {
+        flex: 1;
+        outline: none;
+        resize: vertical; // prevent resizing horizontally
+      }
+    }
+
+    .jse-data-contents {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: $padding-double;
+
+      .jse-original-data {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        min-height: 0;
+        box-sizing: border-box;
+
+        &.jse-hide {
+          flex: none;
+        }
+      }
+
+      .jse-preview-data {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        min-height: 0;
+        box-sizing: border-box;
+      }
+
+      &.jse-hide-original-data {
+        flex-direction: column;
+        gap: 0;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .jse-actions {
+    padding: $padding $padding-double $padding-double;
+  }
+
+  @media screen and (max-width: 1200px) {
+    .jse-main-contents {
+      flex-direction: column;
+      overflow: auto;
+
+      .jse-query-contents {
         textarea.jse-query {
-          flex: 1;
-          outline: none;
-          resize: vertical; // prevent resizing horizontally
+          min-height: 150px;
+          flex: none;
         }
       }
 
       .jse-data-contents {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: $padding-double;
-
-        .jse-original-data {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          min-height: 0;
-          box-sizing: border-box;
-
-          &.jse-hide {
-            flex: none;
-          }
-        }
-
-        .jse-preview-data {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          min-height: 0;
-          box-sizing: border-box;
-        }
-
-        &.jse-hide-original-data {
-          flex-direction: column;
-          gap: 0;
-          margin-bottom: 0;
-        }
-      }
-    }
-
-    .jse-actions {
-      padding: $padding $padding-double $padding-double;
-    }
-
-    @media screen and (max-width: 1200px) {
-      .jse-main-contents {
-        flex-direction: column;
-        overflow: auto;
-
-        .jse-query-contents {
-          textarea.jse-query {
-            min-height: 150px;
-            flex: none;
-          }
-        }
-
-        .jse-data-contents {
-          :global(.jse-tree-mode) {
-            height: 300px;
-            flex: none;
-          }
+        :global(.jse-tree-mode) {
+          height: 300px;
+          flex: none;
         }
       }
     }
   }
+}
 
-  .jse-label {
-    font-weight: bold;
-    display: block;
+.jse-label {
+  font-weight: bold;
+  display: block;
+  box-sizing: border-box;
+
+  .jse-label-inner {
+    margin-top: $padding-double;
+    margin-bottom: $padding-half;
     box-sizing: border-box;
 
-    .jse-label-inner {
-      margin-top: $padding-double;
-      margin-bottom: $padding-half;
-      box-sizing: border-box;
-
-      button {
-        @include jsoneditor-button;
-        font-weight: bold;
-        padding: 0;
-      }
+    button {
+      @include jsoneditor-button;
+      font-weight: bold;
+      padding: 0;
     }
   }
+}
 
-  :global(.jse-tree-mode) {
-    flex: 1;
-    background: $input-background-readonly;
-    box-shadow: none;
-    box-sizing: border-box;
+:global(.jse-tree-mode) {
+  flex: 1;
+  background: $input-background-readonly;
+  box-shadow: none;
+  box-sizing: border-box;
 
-    --jse-main-border: #{$input-border};
-  }
+  --jse-main-border: #{$input-border};
+}
 
-  input,
-  textarea {
-    @include modal-input-mixin;
-  }
+input,
+textarea {
+  @include modal-input-mixin;
+}
 
-  .jse-preview.jse-error {
-    flex: 1;
-    background: $input-background-readonly;
-    border: $input-border;
-    color: $error-color;
-    padding: $padding-half;
-  }
+.jse-preview.jse-error {
+  flex: 1;
+  background: $input-background-readonly;
+  border: $input-border;
+  color: $error-color;
+  padding: $padding-half;
+}
 
-  :global(a) {
-    color: $a-color;
-  }
+:global(a) {
+  color: $a-color;
+}
 
-  :global(a:hover) {
-    color: $a-color-highlight;
-  }
+:global(a:hover) {
+  color: $a-color-highlight;
 }
