--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -157,11 +157,11 @@ $errors-overview-max-height: 25%;
   color: $text-color;
 }
 
-@mixin jse-modal-contents {
+@mixin jse-modal-contents($modal-padding: 20px) {
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: $modal-padding;
   overflow: auto;
   min-width: 0;
   min-height: 0;
