chore: refactor :global cases for ContextMenuPointer styling into component properties

--- a/src/lib/components/controls/contextmenu/ContextMenuPointer.scss
+++ b/src/lib/components/controls/contextmenu/ContextMenuPointer.scss
@@ -18,6 +18,15 @@
   border: none;
   box-shadow: $controls-box-shadow;
 
+  &.jse-root {
+    top: 0;
+    right: calc(-2px - $context-menu-pointer-size);
+  }
+
+  &.jse-insert {
+    right: -1px;
+  }
+
   &:hover {
     background: $context-menu-pointer-background-highlight;
   }
