feat: extend `JSONEditorContext` with a property `mode`, and remove some global styling

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -19,6 +19,11 @@ div.jse-editable-div {
     overflow-wrap: normal;
   }
 
+  &.jse-table-cell {
+    overflow-wrap: normal;
+    white-space: nowrap;
+  }
+
   &[contenteditable='true'] {
     outline: $edit-outline;
     background: $background-color;
