--- a/src/lib/plugins/value/components/ReadonlyValue.scss
+++ b/src/lib/plugins/value/components/ReadonlyValue.scss
@@ -3,6 +3,7 @@
 
 // TODO: also share most of the following styling with EditableDiv
 .jse-value {
+  display: inline-block;
   min-width: 2em;
   padding: 0 $input-padding;
   box-sizing: border-box;
@@ -13,6 +14,11 @@
   word-break: normal;
   overflow-wrap: anywhere;
   white-space: pre-wrap; // important for rendering multiple consecutive spaces
+
+  &.jse-table-cell {
+    overflow-wrap: normal;
+    white-space: nowrap;
+  }
 
   &.jse-empty {
     min-width: 4em;
