chore: refactor selection styling (#468)
BREAKING CHANGE:
Some of the class names related to selection highlighting are moved/changed.

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -19,9 +19,14 @@ div.jse-editable-div {
     overflow-wrap: normal;
   }
 
+  &.jse-table-cell {
+    overflow-wrap: normal;
+    white-space: nowrap;
+  }
+
   &[contenteditable='true'] {
     outline: $edit-outline;
-    background: inherit !important;
+    background: $background-color;
     position: relative;
     border-radius: 0;
     z-index: 3; // must be on top of hovering the entry below it
