--- a/src/lib/plugins/value/components/ReadonlyValue.scss
+++ b/src/lib/plugins/value/components/ReadonlyValue.scss
@@ -3,20 +3,21 @@
 
 // TODO: also share most of the following styling with EditableDiv
 .jse-value {
+  display: inline-block;
   min-width: 2em;
   padding: 0 $input-padding;
   box-sizing: border-box;
   outline: none;
   border-radius: 1px;
   vertical-align: top;
-  cursor: $contents-cursor;
 
   word-break: normal;
   overflow-wrap: anywhere;
   white-space: pre-wrap; // important for rendering multiple consecutive spaces
 
-  &:hover {
-    background: $hover-background-color;
+  &.jse-table-cell {
+    overflow-wrap: normal;
+    white-space: nowrap;
   }
 
   &.jse-empty {
