chore: give the background area behind the SearchBox a light gray color in table mode

--- a/src/lib/components/modes/tablemode/TableMode.scss
+++ b/src/lib/components/modes/tablemode/TableMode.scss
@@ -71,6 +71,10 @@
         }
       }
 
+      .jse-search-box-background {
+        background: $table-header-background;
+      }
+
       .jse-table-invisible-end-section {
         td {
           padding-bottom: $padding;
