chore: fix left padding of the color picker button

--- a/src/lib/plugins/value/components/ColorPicker.scss
+++ b/src/lib/plugins/value/components/ColorPicker.scss
@@ -7,7 +7,7 @@
   height: $color-picker-button-size;
   box-sizing: border-box;
   padding: 0;
-  margin: 2px 0 0;
+  margin: 2px 0 0 $padding-half;
   display: inline-flex;
   vertical-align: top;
 
