chore: fix a styling issue in table mode when the editing a value is empty in a better way

--- a/src/lib/components/controls/EditableDiv.scss
+++ b/src/lib/components/controls/EditableDiv.scss
@@ -28,6 +28,7 @@ div.jse-editable-div {
     outline: $edit-outline;
     background: $background-color;
     position: relative;
+    display: inline-block;
     border-radius: 0;
     z-index: 3; // must be on top of hovering the entry below it
   }
