chore: give the area behind the search box a light gray color in tree mode too

--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -67,5 +67,13 @@
       font-family: $font-family;
       font-size: $font-size;
     }
+
+    .jse-search-box-background {
+      $search-box-height: 100px;
+      border: calc($search-box-height / 2) solid $modal-background;
+      margin: -$contents-padding;
+      margin-bottom: $contents-padding;
+      display: inline-block;
+    }
   }
 }
