fix: handle `createQuery` throwing an exception in the TransformModal

--- a/src/lib/components/modals/TransformModal.scss
+++ b/src/lib/components/modals/TransformModal.scss
@@ -47,6 +47,10 @@
         }
       }
 
+      .query-error {
+        color: $error-color;
+      }
+
       textarea.jse-query {
         flex: 1;
         outline: none;
